--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "port": 8000,
+    "port": 8002,
     "regions": {
         "ap-northeast-1": ["s3.ap-northeast-1.amazonaws.com"],
         "ap-southeast-1": ["s3.ap-southeast-1.amazonaws.com"],
@@ -50,11 +50,28 @@
     },
     "antidote": {
         "host": "localhost",
-        "port": 8087
+        "port": 8287
     },
+
+    "antidoteTab": [
+  	{
+          "host": "localhost",
+          "port": 8187
+     	 },
+  	{
+          "host": "localhost",
+          "port": 8287
+    	  },
+  	{
+          "host": "localhost",
+          "port": 8387
+     	 }
+  	],
+
+
     "userMetaIndexing":true,
     "systemMetaIndexing":true,
-    "indexServerPort":7000,
+    "indexServerPort":7002,
     "healthChecks": {
         "allowFrom": ["127.0.0.1/8", "::1"]
     }
